<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Cronometro">

<TextView
    android:id="@+id/text_view_countdown"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="172dp"
    android:text="@string/time"
    android:textColor="@android:color/black"
    android:textSize="60sp" />

<Button
    android:id="@+id/button_start_pause"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/button_reset"
    android:layout_centerHorizontal="true"
    android:text="@string/boton1" />

<Button
    android:id="@+id/button_reset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="142dp"
    android:text="@string/boton2"
    android:visibility="invisible"
    tools:visibility="visible" />

<Spinner
    android:id="@+id/sp_hours"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/button_reset"
    android:layout_marginTop="97dp" />

<Spinner
    android:id="@+id/sp_minutes"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/button_reset"
    android:layout_alignTop="@+id/sp_hours" />

<TextView
    android:id="@+id/HH"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/sp_hours"
    android:layout_marginStart="134dp"
    android:text="@string/HH" />

<TextView
    android:id="@+id/MM"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/sp_hours"
    android:layout_marginEnd="151dp"
    android:text="@string/MM" />

<TextView
    android:id="@+id/separador"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/sp_hours"
    android:layout_centerHorizontal="true"
    android:text="@string/separador"
    android:textSize="24sp" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="63dp"
    android:text="@string/tview"
    android:textSize="18sp" />

<TextView
    android:id="@+id/tiempo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="98dp"
    android:layout_marginStart="31dp"
    android:textSize="18sp" />

<TextView
    android:id="@+id/cobro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignStart="@+id/tiempo"
    android:layout_marginBottom="54dp"
    android:textSize="18sp" />

</RelativeLayout>