<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_registro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rNombre"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />
                <EditText
                    android:id="@+id/rnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rApellidoP"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />
                <EditText
                    android:id="@+id/rapellidop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rApellidoM"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/rapellidom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rCorreo"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />
                <EditText
                    android:id="@+id/remail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rNTel"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/rTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />
            </LinearLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/Beneficiario"
                />
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Si"
                    android:id="@+id/radioButton"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="No"
                    android:id="@+id/radioButton2"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rFNac"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3333"
                    android:textAlignment="center"
                    android:text="@string/rDia"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3333"
                    android:textAlignment="center"
                    android:text="@string/rMes"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3333"
                    android:textAlignment="center"
                    android:text="@string/rAno"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3333"
                    android:id="@+id/rfDia"
                    android:inputType="number"
                    android:hint="@string/rRefDia"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3333"
                    android:id="@+id/rfMes"
                    android:inputType="number"
                    android:hint="@string/rRefMes"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3333"
                    android:id="@+id/rfAno"
                    android:inputType="number"
                    android:hint="@string/rRefAno"
                    android:textAlignment="center"
                    />

                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rCont"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/rpass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

            <TextView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rTPago"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/rtpago1"
                    android:inputType="phone"
                    />
                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/rtpago2"
                    android:inputType="phone"
                    />
                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/rtpago3"
                    android:inputType="phone"
                    />
                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/rtpago4"
                    android:inputType="phone"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/kat"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kat"
                android:textAlignment="center"
                />


            <ImageButton
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/ic_menu_send" />
            />
        </LinearLayout>
    </ScrollView>


</LinearLayout>